# methercryptoCEX

./: .env.example  .gitignore  ADMIN_API_RESPONSE_ERROR_AUDIT.md  ADMIN_CONTROL_PLANE_FULL_VERIFICATION.md  ADMIN_CONTROL_PLANE_SAFETY_VERIFICATION.md  ADMIN_SAFETY_REPORT.md  AUDIT_REPORT_FRESH.md  AUDIT_SPOT_P2P_FIU_INDIA.md  BALANCE_ARCHITECTURE.md  BALANCE_VISIBILITY_AUDIT.md  DEEP_AUDIT_COMPLETE_2026.md  DEEP_AUDIT_FULL_BINANCE_GRADE.md  DEEP_AUDIT_USER_SIDE_SPOT_P2P.md  DEEP_DIVE_AUDIT_AFTER_COMPLETION.md  EXCHANGE_AUDIT_FULL.md  EXCHANGE_AUDIT_REPORT.md  EXCHANGE_SYSTEM_AUDIT_REPORT.md  EXCHANGE_UX_BINANCE_AUDIT.md  FUNDS_MOVEMENT_AUDIT.md  LAUNCH_CHECKLIST.md  LIVE_CHECKLIST_PROGRESS.md  LOGIN_TIMEOUT_DEBUG.md  P2P_ORDER_LIFECYCLE_AUDIT.md  PENDING_BACKEND_FRONTEND_LIST.md  PRODUCTION_EXCHANGE_AUDIT_REPORT.md  README.md  REMAINING_PROJECT_TASKS.md  REMAINING_TASKS_COMPLETE.md  REMAINING_UX_UI_SPOT_P2P.md  SYSTEM_AUDIT_REPORT.md  SYSTEM_AUDIT_TIER1_COMPARISON.md  SYSTEM_CHECK_FULL.md  SYSTEM_SNAPSHOT_REPORT.md  TECHNICAL_SYSTEM_MAP.md  UI_TASKS_BINANCE_LEVEL.md  UI_UX_DEEP_AUDIT_COMPLETE.md  USER_PANEL_UI_AUDIT.md  USER_SIDE_DEEP_UX_UI_AUDIT.md  UX_UI_AUDIT_FULL.md  WALLET_IDENTITY_INVARIANTS_AUDIT.md  (+7 more)
data/: spot-orderbook-writer-snapshot.json
docs/: A11Y_MOBILE.md  ABUSE_FAILURE_AUDIT.md  ACTIVITY_AND_SESSIONS.md  ADMIN_BACKEND_CONNECTIVITY_AUDIT.md  (+176 more)
matching-engine/: Cargo.toml
matching-engine/.cargo/: config.toml
matching-engine/src/: engine.rs  hmac_auth.rs  main.rs  orderbook.rs  persistence.rs  publish_pipeline.rs  recovery.rs  types.rs  wal.rs
(+1307 files in other folders)
