[package]
name = "matching-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time"] }
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
rust_decimal = { version = "1", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
