[package]
name = "matching-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time"] }
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
dashmap = "5.5"
rust_decimal = { version = "1", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
async-nats = { version = "0.38" }
bytes = "1"
futures = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2.5"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
governor = "0.6"
ipnet = "2"
